# Ground_False

./: .gitignore  README.md  croissant.json  lakefile.lean  pyproject.toml
benchmarks/: faithfulness_summary.md
benchmarks/CombiBench-84063de/: lake-manifest.json  lakefile.lean  metadata.csv
benchmarks/CombiBench-84063de/combibench/: brualdi_ch4_35.lean  hackmath_4.lean
benchmarks/CombiBench-84063de/with_solution/: brualdi_ch1_5_sol.lean  brualdi_ch2_36_sol.lean  hackmath_4_sol.lean
benchmarks/FATE-bb646ec/FATE-H-17967b3118082adfba7c5a5fc03b5f4a53717b59/: FATE-H.json  lake-manifest.json  lakefile.lean
benchmarks/LeanCat-5fce6b4/CAT_statement/: S_0039.lean
benchmarks/LeanCat-5fce6b4/leancat/: S_0001.lean  S_0002.lean  S_0003.lean  S_0004.lean  S_0005.lean  S_0006.lean  S_0007.lean  (+93 more)
benchmarks/ProverBench-3b9f067/: lake-manifest.json  lakefile.lean
benchmarks/PutnamBench-77ea5a0/: lake-manifest.json  lakefile.lean
logs/faithfulness-run1/: faithfulness.jsonl  faithfulness_report.md  list.md
logs/faithfulness-run2/: faithfulness.jsonl  faithfulness_report.md  list.md
logs/faithfulness-run3/: faithfulness.jsonl  faithfulness_report.md  list.md
logs/faithfulness-run4/: faithfulness.jsonl  faithfulness_report.md  list.md
logs/faithfulness-run5/: faithfulness.jsonl  faithfulness_report.md  list.md
logs/faithfulness-run6/: faithfulness.jsonl  faithfulness_report.md
logs/faithfulness-run7/: faithfulness.jsonl  faithfulness_report.md
logs/faithfulness-run8/: faithfulness.jsonl  faithfulness_report.md
scripts/: check_faithfulness.py  classify_errors.py
(+5609 files in other folders)
