[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pfnv"
version = "0.1.0"
description = "ProofNet-Verified inference adapters and utilities"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "boto3>=1.34",
    "aioboto3>=12.0",
    "python-dotenv>=1.0",
    "typing_extensions>=4.5",
]

[tool.setuptools.packages.find]
include = ["pfnv*"]
exclude = ["experiments*", "scripts*", "tests*", "logs*"]
